--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-Blue Dragon Enterprises 
- 
+<!doctype html>
+<html>
+<head>
+<meta charset='utf-8' />
+<title>Blue Dragon Enterprises</title>
+</head>
+<body>
+<pre>
  *****            *********          **********           ***** 
  ******          ***********        ************         ****** 
  **   **        **@@@**    **      **@@@***   ***       **@@@** 
@@ -26,3 +32,6 @@ Blue Dragon Enterprises
        **  **@@*            *****@**            ** **@@*        
         *******              ******              ******         
          *****                ****                ****          
+</pre>
+</body>
+</html>
